feat: add api for sub-project items
